--- a/frontend/src/components/PluginDetails/SupportInfo.module.scss
+++ b/frontend/src/components/PluginDetails/SupportInfo.module.scss
@@ -23,3 +23,9 @@
     @apply fill-current text-napari-gray;
   }
 }
+
+.missingGithub {
+  path {
+    @apply stroke-current text-napari-gray;
+  }
+}
